git commit -m "mvp done"

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -11,8 +11,7 @@ body,
 }
 
 .pixelContainer {
-	width: 100%;
 	display: flex;
-	justify-content: center;
-	padding: 300px;
+	flex-wrap: wrap;
+	width: 100%
 }
