--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+
 html,
 body,
 .viewport {
@@ -11,7 +13,25 @@ body,
 }
 
 .pixelContainer {
+	z-index: -1;
 	display: flex;
 	flex-wrap: wrap;
-	width: 100%
+	width: 100%;
+}
+
+.rainbow-text {
+	text-align: center;
+	background-image: linear-gradient(
+		to left,
+		violet,
+		indigo,
+		blue,
+		green,
+		yellow,
+		orange,
+		red
+	);
+	color: black;
+	font-size: 2em;
+	font-family: 'Shadows Into Light', cursive;
 }
